# Flask-API

./: .env  .env.prod  .flake8  README.md  app.py  docker-compose.yml  pyproject.toml
exceptions/: exceptions.py
migrations/versions/: 5711732958e8_migrate_test.py
purchase_items/: models.py  purchase_item_service.py  resources.py
purchase_orders/: models.py  purchase_order_service.py  resources.py
test/: conftest.py
test/purchase_items/: conftest.py  test_purchase_item_service.py  test_resources.py
test/purchase_orders/: conftest.py  test_purchase_orders_service.py  test_resources.py
users/: exceptions.py  model.py  resources.py  user_service.py
